--- a/examples/simple-react/src/template.html
+++ b/examples/simple-react/src/template.html
@@ -9,6 +9,10 @@
 
   <body>
     <div class="pure-g">
+      <div class="pure-u-1 header-slot"></div>
+    </div>
+
+    <div class="pure-g">
       <div class="pure-u-1-3"></div>
       <div class="pure-u-1-3 app-slot"></div>
       <div class="pure-u-1-3"></div>
