--- a/examples/simple-react/src/template.html
+++ b/examples/simple-react/src/template.html
@@ -9,7 +9,9 @@
 
   <body>
     <div class="pure-g">
-      <div class="pure-u-1 header-slot"></div>
+      <div class="pure-u-1-3"></div>
+      <div class="pure-u-1-3 header-slot"></div>
+      <div class="pure-u-1-3"></div>
     </div>
 
     <div class="pure-g">
